# spectr

./: .gitignore  LICENCE  Makefile  README.md  README.org  __init__.py  _incorporated_code  argo.py  atmosphere.py  bruker.py  conversions.py  convert.py  cross_section.py  data.py  data_prototypes.py  database.py  dataset.py  dataset2.py  datum.py  electronic_states.py  env.py  exceptions.py  fortran_tools.f90  hitran.py  infer.py  infer_functions.py  kinetics.py  levels.py  levels_prototypes.py  line_profiles_tran2014.f  lines.py  lines_levels_prototypes.py  lines_prototypes.py  lineshapes.py  meson.build  new_dataset.py  optimise.py  plotting.py  prototypes.py  pyproject.toml  (+11 more)
data/: electronic_states.json  species.csv  species.psv  species_data.py
data/hitran/: molparam.psv  species_data.py
data/hitran/CH₃CN/: main_isotopologue
data/hitran/CH₃Cl/: main_isotopologue
data/hitran/CH₃OH/: main_isotopologue
data/hitran/CH₄/: main_isotopologue
data/hitran/CO/: main_isotopologue
data/hitran/CO₂/: main_isotopologue
data/hitran/CS/: main_isotopologue
data/hitran/CS₂/: main_isotopologue
data/hitran/C₂H₂/: main_isotopologue
data/hitran/C₂H₄/: main_isotopologue
data/hitran/C₂H₆/: main_isotopologue
data/hitran/C₂N₂/: main_isotopologue
data/hitran/C₄H₂/: main_isotopologue
data/hitran/HCN/: main_isotopologue
data/hitran/HCOOH/: main_isotopologue
data/hitran/HCl/: main_isotopologue
data/hitran/HNO₃/: main_isotopologue
data/hitran/H₂CO/: main_isotopologue
data/hitran/H₂O/: main_isotopologue
data/hitran/H₂O₂/: main_isotopologue
data/hitran/H₂S/: main_isotopologue
data/hitran/NH₃/: main_isotopologue
data/hitran/NO/: description  main_isotopologue
data/hitran/NO₂/: main_isotopologue
data/hitran/N₂/: main_isotopologue
data/hitran/N₂O/: main_isotopologue
data/hitran/OCS/: main_isotopologue
data/hitran/O₂/: main_isotopologue
data/hitran/O₃/: main_isotopologue
data/hitran/PH₃/: main_isotopologue
data/hitran/SO₂/: main_isotopologue
data/levels/: Ar.h5  H2.h5  Kr.h5  O.h5  Xe.h5  collect_data.py  ¹H₂.h5  ¹²C¹⁶O.h5  ¹²C¹⁷O.h5  ¹²C¹⁸O.h5  ¹³C¹⁶O.h5  ¹³C¹⁷O.h5  ¹³C¹⁸O.h5  ¹⁴C¹⁶O.h5  ¹⁴C¹⁷O.h5  ¹⁴C¹⁸O.h5  ¹⁴N¹⁵N.h5  ¹⁴N₂.h5  ¹⁵N₂.h5
data/lines/: Ar.h5  C.h5  H2.h5  H₂.h5  Kr.h5  N.h5  O.h5  Xe  Xe.h5  collect_data.py  ¹H₂.h5
data/reference_lines/: H2.h5  N.h5  O.h5  Xe  Xe.h5  collect_data.py  collected_lines.psv
data/species/: convert_from_wikipedia_list.py  wikipedia_list_2022-01-11.psv
examples/: 01_simulate_a_simple_absorption_spectrum.py  03_fit_CS2_spectrum_using_HITRAN_linelist.py  ARGO_load_and_plot_model_output.py  simulate_CS2_spectrum_from_HITRAN_linelist.py
examples/atmosphere/: argo_load_and_plot_model_output.py
examples/data/ARGO_early_earth_with_impacts/: RTdepthrun.py  RTheader.py  Stand-2020October_impacts  argo.f
examples/fit_absorption/: benzene_cross_section.py  fit_manually.py  fit_multiple_species.py  fit_multiple_spectra.py  fit_one_spectrum.py
examples/spectrum/: 01_simulate_a_simple_absorption_spectrum.py  02_simulate_CS2_spectrum_from_HITRAN_linelist.py  03_fit_CS2_spectrum_using_HITRAN_linelist.py  04_fit_13C18O_ap-X_5-0_band_model.py  04_fit_13C18O_ap-X_5-0_band_model_vary_individually.py
examples/spectrum/data/: 13C18O_spectrum.h5  SOLEIL_13C18O_ap05-X00-170216-J
examples/viblevel/: 3Π_3Σ+_transition.py
spectr/: Makefile  atmosphere.py  electronic_states.py  env.py  fortran_tools.f90  hitran.py  lineshapes.py  spectrum.py
spectr/data/: .gitignore  electronic_states.py  species_data.py
spectr/data/hitran/: molparam.psv
spectr/data/levels/: ¹²C¹⁷O.h5  ¹²C¹⁸O.h5  ¹³C¹⁶O.h5  ¹³C¹⁷O.h5  ¹⁴C¹⁷O.h5  ¹⁵N₂.h5
tests/: parameters.psv  test_atmosphere.py  test_conversions.py  test_convert.py  test_data.py  test_database.py  test_dataset.py  test_dataset2.py  test_datum.py  test_electronic_states.py  test_hitran.py  test_import.py  test_infer.py  test_kinetics.py  test_levels.py  test_lines.py  test_lineshapes.py  test_new_dataset.py  test_optimise.py  test_plotting.py  test_quantum_numbers.py  test_spectrum.py  test_tools.py  test_viblevel.py
tests/data/: CS2_experimental_spectrum  CS2_experimental_spectrum.h5  CS2_linelist.rs  SO_rotational_levels  SO_rotational_lines  levels_14N2  levels_14N2_with_uncertainties  test_lines  test_load.psv  test_load_2.psv
tests/test_optimise/: optimise_statistics.py  optimise_statistics_fit_spectrum.py
tests/test_optimise_statistics/: optimise_statistics.py
tests/test_viblevel/: run_comparison_with_pgopher.py
(+1215 files in other folders)
