[build-system]
requires = ["setuptools","numpy"]
build-backend = "setuptools.build_meta"

[project]

name = "spectr"
version = "0.1.0"
# author = "Alan Heays"
# author_email = "aheays@fastmail.com"
# url = "https://github.com/aheays/spectr"
# description = "spectr stuff"
# long_description = "file: README.md"
# long_description_content_type = "text/markdown"
# license = GPLv3
dependencies = [
             "bidict",
             "cycler",
             "hitran-api",
             "brukeropusreader",
             "dill",
             "h5py",
             "matplotlib",
             "numpy",
             "openpyxl",
             "periodictable",
             "scipy",
             "sympy",
             "xmltodict",
             "pyqt5",
]

# [tool.setuptools.packages.find]
# where = ["src"]  # ["."] by default

[tool.setuptools.package-data]
"*" = ["*.so","*.f90","Makefile"]
