[build-system]
requires = ["setuptools","numpy"]
build-backend = "setuptools.build_meta"

[project]

name = "spectr"
version = "0.1.0"
requires-python = ">= 3.11"
authors = [{name="Alan Heays",email="aheays@fastmail.com"},]
description = "A collection of tools for spectrosocopic data analysis and modelling"
readme = "README.md"
license = {text="GPLv3"}
dependencies = [
             "bidict",
             "cycler",
             "hitran-api",
             "brukeropusreader",
             "dill",
             "h5py",
             "matplotlib",
             "numpy",
             "openpyxl",
             "periodictable",
             "scipy",
             "sympy",
             "xmltodict",
             "pyqt5",
]

classifiers = [
              "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
              "Programming Language :: Python",
              "Programming Language :: Fortran",
]

[project.urls]
Repository = "https://github.com/aheays/spectr"


# [tool.setuptools.packages.find]
# where = ["src"]  # ["."] by default

[tool.setuptools.package-data]
"*" = ["*.so","*.f90","Makefile"]
