[metadata]
name = spectr
version = 0.1.0
author = Alan Heays
author_email = aheays@fastmail.com
url = https://github.com/aheays/spectr
description = 
long_description = file: README.org
long_description_content_type = text/org
keywords = example, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
# packages = find:
# zip_safe = True
# include_package_data = True
install_requires =
  bidict
  cycler
  hitran-api
  brukeropusreader
  dill
  h5py
  matplotlib
  numpy
  openpyxl
  periodictable
  scipy
  sympy
  xmltodict
  pyqt5

# [build_ext]
# inplace=1

# [options.entry_points]
# console_scripts = 
    # my-example-utility = example.example_module:main

# [options.extras_require]
# notebook = jupyter>=1.0.0, matplotlib
# dev = 
    # black==22.1.0
    # flake8==4.0.1

[options.package_data]
* = *.so
# example = data/schema.json, *.txt
# # * = README.md

# [options.package_data]
# * = spectr/fortran_tools.cpython-311-x86_64-linux-gnu.so